--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         
 <!-- 2. Add the JavaScript to initialize the chart on document ready -->
-      <script type="text/javascript" src=js/chart.js></script>
+      <script type="text/javascript" src=javascripts/chart.js></script>
 
 <h3>
   
