--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Final-exam</h1>
+        <h1>Amanda Finuccio</h1>
         <p></p>
 
         <p class="view"><a href="https://github.com/auremoser/final-exam">View the Project on GitHub <small>auremoser/final-exam</small></a></p>
